# vemmio-client

./: LICENSE  README.md  pyproject.toml
vemmio_client/: __init__.py  accelerometer.proto  accelerometer_pb2.py  accelerometer_pb2.pyi  addon.proto  addon_pb2.py  addon_pb2.pyi  admin.proto  admin_pb2.py  admin_pb2.pyi  battery.proto  battery_pb2.py  battery_pb2.pyi  ble.proto  ble_pb2.py  ble_pb2.pyi  bsensor.proto  bsensor_pb2.py  bsensor_pb2.pyi  carbon_dioxide.proto  carbon_dioxide_pb2.py  carbon_dioxide_pb2.pyi  carbon_monoxide.proto  carbon_monoxide_pb2.py  carbon_monoxide_pb2.pyi  color.proto  color_pb2.py  color_pb2.pyi  configuration.proto  configuration_pb2.py  configuration_pb2.pyi  devices.proto  devices_pb2.py  devices_pb2.pyi  door.proto  door_pb2.py  door_pb2.pyi  doorbell.proto  doorbell_pb2.py  doorbell_pb2.pyi  (+106 more)
