[tool.poetry]
name = "vemmio-client"
version = "0.2.1"
description = ""
authors = ["vmmgu <vmmgu@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
protobuf = ">=4.24,<5.0"
aiohttp = ">=3.9,<4.0"
async-timeout = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
